# COLA-min-example

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: ci.yml
data/: ExModuleConfig.cmake.in
include/: ExFactories.hh  ExFilters.hh  ExModule.hh
src/: ExFactories.cc  ExFilters.cc  ExModule.cc
test/: CMakeLists.txt  main.cpp
test/data/: config.xml
tests/: CMakeLists.txt  exmodule_test.cc
